# ME700HW3

./: BeamExample_part4.md  LICENSE  Overview.txt  Overvieww.md  README.md  Tutorial_partC.ipynb  assemble_global.py  example_functions.py  full.md  local_element.py  pre_process_demo_helper_fcns.py  pyproject.toml  refinement_part4B.ipynb  refinement_part4B.py  solver.py  solver_demo_helper_functions.py  tests.yml  tutorial_Part4A.ipynb  tutorial_discretization.ipynb  visualize.py
src/: discretization.py  discretization_demo_helper_fcns.py  sparse.txt  tutorial_discretization.ipynb
src/finiteelementanalysis/: discretization.py  discretization_demo_helper_fcns.py  pre_process.py  solver.py
tests/: test_assemble_global.py  test_discretization.py  test_discretization_demo_helper_fcns.py  test_example_functions.py  test_local_element.py  test_pre_process.py  test_pre_process_demo_helper_fcns.py  test_solver.py  test_solver_demo_helper_functions.py  test_visualize.py
tutorials/: Part2A.ipynb  Part2B.ipynb  Part2C.ipynb  Tutorial_Part4A.ipynb  full_code_example_1.py  full_code_example_2.py  jhasd.ipynb  lessee.ipynb  letsseeB.ipynb  letsseeB.py  letsseeC.py  new.py  part2C.ipynb  part4b.ipynb  part4c.ipynb  partb.ipynb  tutorial_discretization.ipynb  tutorial_mesh_quality.ipynb
