[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finiteelementanalysis"
version = "0.0.0"
authors = [
  { name = "Emma Lejeune", email = "elejeune@bu.edu" },
]
description = "finiteelementanalysis workflow"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "contourpy>=1.3",
  "cycler>=0.12",
  "fonttools>=4.56",
  "gmsh>=4.13",
  "kiwisolver>=1.4",
  "matplotlib>=3.8",        # 3.10.1 is in dev, but >=3.8 avoids issues
  "numpy>=1.24,<2.2",       # Avoid NumPy 2.2.3 for now due to ecosystem issues
  "numba>=0.61,<0.62",      # Compatible with numpy<2.2
  "packaging>=24.0",
  "pillow>=11.0",
  "pyparsing>=3.0",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "python-dateutil>=2.8",
  "scipy>=1.11,<1.16"
]

[project.urls]
"Homepage" = "https://github.com/Lejeune-Lab-Graduate-Course-Materials/finite-element-analysis"
"Bug Tracker" = "https://github.com/Lejeune-Lab-Graduate-Course-Materials/finite-element-analysis/issues"
